src/objects/PC_Reports_List__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is to store the existing Project Central application report IDs for Project object custom button URLs.</description>
    <fields>
        <fullName>MasterChildProjects__c</fullName>
        <label>MasterChildProjects</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectMilestones__c</fullName>
        <label>ProjectMilestones</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRisks__c</fullName>
        <label>ProjectRisks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectSpending__c</fullName>
        <label>ProjectSpending</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTaskSnapshot__c</fullName>
        <label>ProjectTaskSnapshot</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTeamMembers__c</fullName>
        <label>ProjectTeamMembers</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>PC Reports List</label>
</CustomObject>